# -1995

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AI_ASSISTANT_N8N_INTEGRATION.md  ANALYSIS_EXECUTIVE_SUMMARY.md  ANALYSIS_REPORT.md  CHANGELOG.md  CONFIGURATION_CONSOLIDATION.md  CONFIGURATION_ORGANIZATION_SUMMARY.md  CONFIG_CONSOLIDATION_GUIDE.md  CONTRIBUTING.md  CORE_CONSOLIDATION_SUMMARY.md  GPU_PROFILER_DOCS.md  GPU_PROFILER_DOCUMENTATION.md  INTEGRATION_ANALYSIS_REPORT.md  LIFE_ORGANIZER_INTEGRATION.md  MEMORY_PROFILER_GUIDE.md  Makefile  NOTE_TAKER_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PERFORMANCE_REPORT.md  QUICK_REFERENCE.md  README.md  SKILL_FACTORY_DOCS.md  SYSTEM_ANALYSIS_REPORT.md  THOUGHT_REFLECTOR_IMPLEMENTATION.md  TIME_BLOCK_PLANNER_IMPLEMENTATION.md  TODO_IMPLEMENTATION_SUMMARY.md  benchmark_improvements.py  config.dev.yaml  config.yaml  debug_config.py  demo_advanced.py  demo_gpu_profiler.py  demo_life_organizer.py  final_config_test.py  generate_pdf_report.py  gpu_profiler_config.yaml  (+30 more)
apps/desktop/: README.md  index.js  package-lock.json  package.json
configs/environments/: development.yaml  production.yaml  staging.ymal
configs/models/: model_configs.yaml
configs/skills/: note_taker.yaml  skill_configs.yaml  time_block_planner.yaml  time_machine.yaml
data/: README.md
data/events/: events.jsonl
data/models/: model_registry.json
docker/: Dockerfile  Dockerfile.desktop.prod  Dockerfile.dev  docker-compose.desktop.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  health-check.sh  simple-health-check.sh
docs/: COMPREHENSIVE_BUILD_AND_USAGE_GUIDE.md  DOCKER_BUILD_FIX.md  QUICK_START.md  README.md  REQUIREMENTS_ANALYSIS.md  SOLUTION_SUMMARY.md  TROUBLESHOOTING_ACTIVATION_GUIDE.md  docker-deployment.md  memory_profiler_guide.md
docs/architecture/: ARCHITECTURE_ANALYSIS_REPORT.md  DELIVERABLES_SUMMARY.md  README.md  ai_model_integration.mmd  data_flow_diagram.mmd  deployment_architecture.mmd  report.html  sequence_diagram.mmd  system_architecture.mmd
docs/skills/: time_block_planner_examples.md  time_machine.md
infrastructure/: README.md
infrastructure/kubernetes/deployments/: api-deployment.yaml
infrastructure/kubernetes/services/: api-service.yaml
infrastructure/monitoring/prometheus/: prometheus.yml
migrations/: alembic.ini
n8n-ai-assistant/: .eslintrc.json  .gitignore  README.md  gulpfile.js  package.json  tsconfig.json
n8n-ai-assistant/credentials/: AiAssistantApi.credentials.ts
n8n-ai-assistant/examples/use-cases/: README.md
n8n-ai-assistant/examples/workflows/: memory-enhanced-chat.json  simple-chat.json
n8n-ai-assistant/nodes/AiAssistantChat/: AiAssistantChat.node.ts
n8n-ai-assistant/nodes/AiAssistantMemory/: AiAssistantMemory.node.ts
n8n-ai-assistant/nodes/AiAssistantSkill/: AiAssistantSkill.node.ts
n8n-ai-assistant/nodes/AiAssistantWorkflow/: AiAssistantWorkflow.node.ts
requirements/: base.txt
scripts/: deploy.sh  format.sh  lint.sh  migrate.sh  setup.sh  test-npm-ci-fix.sh  test.sh  verify-docker-compatibility.sh
src/: __init__.py  cli.py  config_settings.py  di_config.py  main.py
src/api/: __init__.py
src/api/graphql/: __init__.py  graphql_setup.py  mutations.py  resolvers.py  schema.py  setup.py
src/api/grpc/: services.py
src/api/rest/: __init__.py  endpoints.py  rest_setup.py  setup.py
src/api/websocket/: __init__.py  broadcast.py  connection.py  handlers.py  setup.py  websocket_setup.py
src/assistant/: component_manager  component_manager.py  context_manager.py  conversation_manager.py  core.py  core_backup.py  core_engine.py  core_engine_memory.py  interaction_handler.py  personality.py  plugin_manager.py  processor_manager.py  response_generator.py  session_manager.py  session_manager_memory.py  session_memory_integrator.py  workflow_orchestrator.py
src/core/: connection_pool.py  dependency_injection.py  enhanced_cache.py  error_handling.py  health_check.py  lazy_imports.py  performance_config.py  performance_utils.py
src/core/config/: README.md  config.yaml  config_settings.py  consolidated_settings.py  loader.py  logging_config.py  performance_config.py  unified_config.py  yaml_loader.py
src/core/events/: event_bus.py  event_handlers.py  event_types.py
src/core/security/: authentication.py  authorization.py  encryption.py  interfaces.py  sanitization.py
src/integrations/: base_provider.py  deepseek.py  model_inference_coordinator.py  openai.py
src/integrations/cache/: cache_strategy.py  local_cache.py  redis_cache.py
src/integrations/external_apis/: calendar_api.py  weather_api.py  web_search.py
src/integrations/llm/: ollama.py  (+4 more)
src/learning/: continual_learning.py  feedback_processor.py  memory_learning_bridge.py  model_adaptation.py  preference_learning.py
src/memory/: __init__.py  cache_manager.py  simple_manager.py  simple_memory.py  simple_operations.py  simple_vector_store.py  simple_working_memory.py
src/observability/: __init__.py
src/reasoning/: inference_engine.py  knowledge_graph.py  logic_engine.py
src/skills/: README.md  __init__.py  skill_factory.py  skill_registry.py  skill_validator.py
src/vision/: body_language_interpreter.py  expression_analyzer.py  face_recognition.py  gesture_recognizer.py  pose_estimator.py
tests/: conftest.py  test_memory_profiler.py  test_note_taker.py  test_performance_benchmarks.py
tests/e2e/: __init__.py
tests/fixtures/: __init__.py
tests/integration/: test_e2e_api_integration.py
tests/performance/: test_performance_improvements.py
tests/resilience/: __init__.py  chaos_testing.py  fault_tolerance.py
tests/security/: __init__.py  auth_tests.py  vulnerability_tests.py
tests/skills/: demo_thought_reflector.py  test_thought_reflector.py  test_thought_reflector_direct.py
tests/smoke/: __init__.py  basic_functionality.py
tools/: dead_code_analyzer.py  session_memory_migration.py
tools/code_generators/: __init__.py
tools/data_processors/: __init__.py
tools/deployment_helpers/: __init__.py
tools/model_converters/: __init__.py
(+141 files in other folders)
